# lindos

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .swiftlint.yml  CONTRIBUTING.md  README.md  justfile
.github/workflows/: README.md  python-tests.yml  rust-tests.yml  swift-tests.yml
gnome/: README.md  flake.nix  pyproject.toml  tox.ini
gnome/LindosTrayApp/: __init__.py  app.py  rust_core.py
gnome/lindos/: __init__.py  app.py
gnome/tests/: __init__.py  test_app.py  test_cli.py  test_rust_core.py
macos/: XCODE_TEST_SETUP.md
macos/LindosTrayApp/LindosTrayApp/: AppDelegate.swift  ChatViewModel.swift  Info.plist  LindosTrayApp-Bridging-Header.h  LindosTrayAppMain.swift  RustCore.swift  TrayChatView.swift
macos/LindosTrayApp/LindosTrayApp.xcodeproj/: project.pbxproj
macos/LindosTrayApp/LindosTrayApp.xcodeproj/xcshareddata/xcschemes/: LindosTrayApp.xcscheme
macos/Tests/LindosTrayAppTests/: AppDelegateTests.swift  ChatViewModelTests.swift  RustCoreTests.swift  TrayChatViewTests.swift
rust-core/: Cargo.toml  build.rs  cbindgen.toml
rust-core/include/: lindos.h
rust-core/src/: lib.rs
scripts/: build_macos.sh
